// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormErrorMessage with errorMessage 1`] = `
<div
  className=""
  id="test"
>
  <div
    className="error alignStart breakWord Text fontSize100 fontWeightNormal"
  >
    <span
      className="formErrorMessage"
      id="test"
    >
      <div
        className="box"
        role="alert"
      >
        <div
          className="Flex rowGap2 columnGap2 xsDirectionRow xsItemsCenter"
        >
          <div
            className="FlexItem"
          >
            <div
              className="box"
            >
              <svg
                aria-hidden={true}
                aria-label=""
                className="error icon iconBlock"
                height={16}
                role="img"
                viewBox="0 0 24 24"
                width={16}
              >
                <path
                  d="test-file-stub"
                />
              </svg>
            </div>
          </div>
          <div
            className="FlexItem"
          >
            some error message
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`FormErrorMessage with no errorMessage 1`] = `
<div
  className=""
  id="test"
>
  <div
    className="error alignStart breakWord Text fontSize100 fontWeightNormal"
  >
    <span
      className="formErrorMessage"
      id="test"
    >
      <div
        className="box"
        role="alert"
      >
        <div
          className="Flex rowGap2 columnGap2 xsDirectionRow xsItemsCenter"
        >
          <div
            className="FlexItem"
          >
            <div
              className="box"
            >
              <svg
                aria-hidden={true}
                aria-label=""
                className="error icon iconBlock"
                height={16}
                role="img"
                viewBox="0 0 24 24"
                width={16}
              >
                <path
                  d="test-file-stub"
                />
              </svg>
            </div>
          </div>
          <div
            className="FlexItem"
          />
        </div>
      </div>
    </span>
  </div>
</div>
`;
